--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -51,7 +51,7 @@
             </div>
 
 
-            <form class="user" th:action="@{${#httpServletRequest.contextPath}/loginPagePost}" method="post">
+            <form class="user" th:action="@{${#httpServletRequest.contextPath}/loginPagePost}" method="get">
 
             <div class="form-group">
                     <input type="text" class="form-control form-control-user"
